packages/typ/tests/fixtures/diagnostics/0010_core_match_branch_mismatch_01.ml.expected
File "0010_core_match_branch_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0010_core_match_branch_mismatch_01 is not a valid module name.

File "0010_core_match_branch_mismatch_01.ml", line 4, characters 13-18:
4 |   | false -> false
                 ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
